[gd_scene load_steps=35 format=3 uid="uid://bt0era5cir5wp"]

[ext_resource type="Script" uid="uid://5xr0qfhwqmqh" path="res://scripts/UI/UI.gd" id="1_gl4co"]
[ext_resource type="Texture2D" uid="uid://dwolq5pnh4uhs" path="res://placeholders/UI_final_sketch12.png" id="2_thnqs"]
[ext_resource type="Texture2D" uid="uid://05bcct6vndyn" path="res://sprites/Aeiln/Aeiln_portrait.png" id="3_81vvl"]
[ext_resource type="Texture2D" uid="uid://dj7f4kp8yx268" path="res://placeholders/text_UI_single.png" id="4_e6oqk"]
[ext_resource type="Script" uid="uid://ch5j3wpu4eupg" path="res://scripts/UI/button_effect.gd" id="6_84lt7"]
[ext_resource type="FontFile" uid="uid://c34p4ajpn1oxs" path="res://sprites/fonts/CrimsonText-Regular.ttf" id="6_wgnrc"]
[ext_resource type="Texture2D" uid="uid://5onk7hflt8se" path="res://placeholders/heart0.png" id="7_e6oqk"]
[ext_resource type="Script" uid="uid://c5dhb8ju5n5bi" path="res://scripts/UI/texture_button_effect.gd" id="8_2ttv2"]
[ext_resource type="Texture2D" uid="uid://cjdxkq2wlipjx" path="res://placeholders/heart5.png" id="8_e6oqk"]
[ext_resource type="Texture2D" uid="uid://dgx8el3xhm0yv" path="res://placeholders/option_button.png" id="10_e6oqk"]
[ext_resource type="Shader" uid="uid://bgwamcx8ctaw" path="res://shaders/crt_shader.gdshader" id="11_ob0dx"]
[ext_resource type="Texture2D" uid="uid://cdxewyp2ds2v2" path="res://placeholders/dialogue_option.png" id="13_0odk7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_81vvl"]
shader = ExtResource("11_ob0dx")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.0
shader_parameter/scanlines_width = 0.1570000074575
shader_parameter/grille_opacity = 0.10000000475
shader_parameter/resolution = Vector2(8000, 6000)
shader_parameter/pixelate = true
shader_parameter/roll = true
shader_parameter/roll_speed = 1.0
shader_parameter/roll_size = 15.0000007125
shader_parameter/roll_variation = 1.62900007411762
shader_parameter/distort_intensity = 0.0010000000475
shader_parameter/noise_opacity = 0.10000000475
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.06000000285
shader_parameter/aberration = 0.00100004754750004
shader_parameter/brightness = 1.05
shader_parameter/discolor = true
shader_parameter/warp_amount = 1.0000000475
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.70000003325

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wgnrc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e6oqk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_84lt7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2ttv2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u6q2i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ob0dx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_81vvl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t1j05"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0odk7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_alvv5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jfcp0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_04ait"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ouxww"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ce6m7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ok71f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mrqhp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ppsko"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y5wdm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jxfsc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q7onm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uw5bg"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_gl4co")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 1
material = SubResource("ShaderMaterial_81vvl")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -8.0
offset_right = -7.0
offset_bottom = -144.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ControlPortrait" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Portrait" type="TextureRect" parent="ControlPortrait"]
layout_mode = 0
offset_left = -36.0
offset_top = 65.0
offset_right = 444.0
offset_bottom = 545.0
texture = ExtResource("3_81vvl")

[node name="ControlUI" type="Control" parent="."]
z_index = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextUI" type="TextureRect" parent="ControlUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_e6oqk")
expand_mode = 2

[node name="UI" type="TextureRect" parent="ControlUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_thnqs")
expand_mode = 2

[node name="BookButton" type="TextureButton" parent="ControlUI"]
layout_mode = 0
offset_left = 64.0
offset_top = 488.0
offset_right = 122.0
offset_bottom = 567.0
texture_normal = ExtResource("7_e6oqk")
texture_hover = ExtResource("8_e6oqk")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("8_2ttv2")

[node name="ReturnTexture" type="TextureButton" parent="ControlUI"]
layout_mode = 0
offset_left = 347.0
offset_top = 502.0
offset_right = 452.63522
offset_bottom = 559.0
ignore_texture_size = true
stretch_mode = 0

[node name="ReturnButton" type="Button" parent="ControlUI/ReturnTexture"]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 104.0
offset_bottom = 53.0
mouse_filter = 1
theme_override_colors/font_color = Color(0.5176471, 0.5176471, 0.5176471, 1)
theme_override_colors/font_focus_color = Color(0.52156866, 0.52156866, 0.52156866, 1)
theme_override_colors/font_pressed_color = Color(0.52156866, 0.52156866, 0.52156866, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("6_wgnrc")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_wgnrc")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_e6oqk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_84lt7")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_2ttv2")
theme_override_styles/focus = SubResource("StyleBoxEmpty_u6q2i")
text = "return"
script = ExtResource("6_84lt7")

[node name="ControlButtons" type="Control" parent="."]
visible = false
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SpeakTexture" type="TextureButton" parent="ControlButtons"]
layout_mode = 0
offset_left = 380.0
offset_top = 303.0
offset_right = 546.0
offset_bottom = 338.0
texture_normal = ExtResource("10_e6oqk")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("8_2ttv2")

[node name="SpeakButton" type="Button" parent="ControlButtons/SpeakTexture"]
layout_mode = 0
offset_right = 166.0
offset_bottom = 35.0
mouse_filter = 1
theme_override_fonts/font = ExtResource("6_wgnrc")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_ob0dx")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_81vvl")
theme_override_styles/hover = SubResource("StyleBoxEmpty_t1j05")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_0odk7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_alvv5")
text = "Speak"
script = ExtResource("6_84lt7")

[node name="HurtTexture" type="TextureButton" parent="ControlButtons"]
layout_mode = 0
offset_left = 569.0
offset_top = 303.0
offset_right = 735.0
offset_bottom = 338.0
texture_normal = ExtResource("10_e6oqk")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("8_2ttv2")

[node name="HurtButton" type="Button" parent="ControlButtons/HurtTexture"]
layout_mode = 0
offset_right = 166.0
offset_bottom = 35.0
mouse_filter = 1
theme_override_fonts/font = ExtResource("6_wgnrc")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_ob0dx")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_81vvl")
theme_override_styles/hover = SubResource("StyleBoxEmpty_t1j05")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_0odk7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_alvv5")
text = "Hurt"
script = ExtResource("6_84lt7")

[node name="HealTexture" type="TextureButton" parent="ControlButtons"]
layout_mode = 0
offset_left = 380.0
offset_top = 347.0
offset_right = 546.0
offset_bottom = 384.0
texture_normal = ExtResource("10_e6oqk")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("8_2ttv2")

[node name="HealButton" type="Button" parent="ControlButtons/HealTexture"]
layout_mode = 0
offset_right = 166.0
offset_bottom = 35.0
mouse_filter = 1
theme_override_fonts/font = ExtResource("6_wgnrc")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_ob0dx")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_81vvl")
theme_override_styles/hover = SubResource("StyleBoxEmpty_t1j05")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_0odk7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_alvv5")
text = "Heal"
script = ExtResource("6_84lt7")

[node name="KillTexture" type="TextureButton" parent="ControlButtons"]
layout_mode = 0
offset_left = 569.0
offset_top = 347.0
offset_right = 735.0
offset_bottom = 384.0
texture_normal = ExtResource("10_e6oqk")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("8_2ttv2")

[node name="KillButton" type="Button" parent="ControlButtons/KillTexture"]
layout_mode = 0
offset_right = 166.0
offset_bottom = 35.0
mouse_filter = 1
theme_override_fonts/font = ExtResource("6_wgnrc")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_ob0dx")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_81vvl")
theme_override_styles/hover = SubResource("StyleBoxEmpty_t1j05")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_0odk7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_alvv5")
text = "Kill"
script = ExtResource("6_84lt7")

[node name="ControlOptions" type="Control" parent="."]
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="OptionATexture" type="TextureButton" parent="ControlOptions"]
layout_mode = 0
offset_left = 379.0
offset_top = 300.0
offset_right = 735.0
offset_bottom = 338.0
texture_normal = ExtResource("13_0odk7")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("8_2ttv2")

[node name="OptionAButton" type="Button" parent="ControlOptions/OptionATexture"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxEmpty_jfcp0")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_04ait")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ouxww")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ce6m7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ok71f")
script = ExtResource("6_84lt7")

[node name="OptionBTexture" type="TextureButton" parent="ControlOptions"]
layout_mode = 0
offset_left = 379.0
offset_top = 347.0
offset_right = 735.0
offset_bottom = 384.0
texture_normal = ExtResource("13_0odk7")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("8_2ttv2")

[node name="OptionBButton" type="Button" parent="ControlOptions/OptionBTexture"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxEmpty_mrqhp")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ppsko")
theme_override_styles/hover = SubResource("StyleBoxEmpty_y5wdm")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_jxfsc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_q7onm")
script = ExtResource("6_84lt7")

[node name="Text" type="Control" parent="."]
z_index = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Name_Panel" type="Panel" parent="Text"]
layout_mode = 0
offset_left = 379.0
offset_top = 50.0
offset_right = 734.0
offset_bottom = 98.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_uw5bg")

[node name="RichTextLabel" type="RichTextLabel" parent="Text/Name_Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 5.0
offset_right = -20.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.8745098, 0.8745098, 0.8745098, 1)
theme_override_fonts/normal_font = ExtResource("6_wgnrc")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "Ecila"
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="ControlUI/ReturnTexture/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="ControlButtons/SpeakTexture/SpeakButton" to="." method="_on_speak_button_pressed"]
